--- a/Programmers_CodingTestPractice.vcxproj.filters
+++ b/Programmers_CodingTestPractice.vcxproj.filters
@@ -288,5 +288,8 @@
     <ClCompile Include="C++_순열%28permutation%29 구현.cpp">
       <Filter>소스 파일\Level2</Filter>
     </ClCompile>
+    <ClCompile Include="[프로그래머스 레벨 2] 최댓값과 최솟값.cpp">
+      <Filter>소스 파일\Level2</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
